# ruroonga_expr

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  rustfmt.toml  search-index.js
examples/: grouped_expr.rs
ruroonga_expr/: index.html  sidebar-items.js
ruroonga_expr/dsl/: fn.equal_expr.html  fn.fulltext_expr.html  fn.greater_equal_expr.html  fn.greater_expr.html  fn.less_equal_expr.html  fn.less_expr.html  fn.notequal_expr.html  fn.phrase_expr.html  fn.prefix_expr.html  fn.suffix_expr.html  index.html  sidebar-items.js
ruroonga_expr/equal_expr/: index.html  sidebar-items.js  struct.EqualExpr.html
ruroonga_expr/expr/: enum.Escaped.html  enum.Unescaped.html  index.html  sidebar-items.js
ruroonga_expr/fulltext_expr/: enum.Escaped.html  enum.Unescaped.html  index.html  sidebar-items.js  struct.FulltextExpr.html
ruroonga_expr/greater_equal_expr/: index.html  sidebar-items.js  struct.GreaterEqualExpr.html
ruroonga_expr/greater_expr/: index.html  sidebar-items.js  struct.GreaterExpr.html
ruroonga_expr/groupable/: index.html  sidebar-items.js  trait.Fragmentable.html  trait.Groupable.html  type.Query.html
ruroonga_expr/less_equal_expr/: index.html  sidebar-items.js  struct.LessEqualExpr.html
ruroonga_expr/less_expr/: index.html  sidebar-items.js  struct.LessExpr.html
src/: equal_expr.rs  expr.rs  fulltext_expr.rs  greater_equal_expr.rs  greater_expr.rs  less_equal_expr.rs  less_expr.rs  lib.rs  match_expr.rs  notequal_expr.rs  phrase_expr.rs  prefix_expr.rs  suffix_expr.rs
src/dsl/: mod.rs  (+10 more)
tests/: test_builders_dsl.rs  test_operators.rs  tests.rs
(+112 files in other folders)
